kubernetes/.archive/enchanted-natures-dev/web-app/app/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-dev
  namespace: enchanted-natures-dev
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: 'true'
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: &host dev.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-dev
                port:
                  number: 80
  tls:
    - hosts: [*host]
      secretName: web-app-tls
